# photobooth

./: LED.py  button.py  camera.sh  dotstar_simpletest.py  permissions.sh  photo_booth.py  testing_loop.py
cs50_final_project/: CMakeLists.txt  button.h  camera.h  dotstar_led.cpp  led.cpp  main.cpp
